rebranding handled by setting a param [#4 state:resolved]

--- a/trunk/params.ini
+++ b/trunk/params.ini
@@ -1,12 +1,12 @@
-rebrand=no
+rebrand=yes
 mootools=1
 logo=template
-logowidth=6
-body_font=default
-body_googlefont=Cuprum,regular,italic,bold,
-header_font=default
+logowidth=1
+body_font=helvetica
+body_googlefont=
+header_font=helvetica
 header_googlefont=
-columns=main:3;sidebar1:6;sidebar2:3
+columns=sidebar1:3;main:6;sidebar2:3
 Color sample=FFFFFF
 headerstyle=text
 headline=Wireframe Joomla Template
