--- a/trunk/params.ini
+++ b/trunk/params.ini
@@ -1,12 +1,14 @@
-rebrand=yes
+rebrand=no
+style=light
 mootools=1
 logo=template
 logowidth=1
-body_font=helvetica
+body_font=cambria
 body_googlefont=
 header_font=helvetica
 header_googlefont=
 columns=sidebar1:3;main:6;sidebar2:3
+doctype=xhtml1transitional
 Color sample=FFFFFF
 headerstyle=text
 headline=Wireframe Joomla Template
