Doctype generation validates to w3c validator for all three [#7 state:resolved]

--- a/trunk/params.ini
+++ b/trunk/params.ini
@@ -8,7 +8,7 @@ body_googlefont=
 header_font=helvetica
 header_googlefont=
 columns=sidebar1:3;main:6;sidebar2:3
-doctype=xhtml1transitional
+doctype=xhtml1strict
 Color sample=FFFFFF
 headerstyle=text
 headline=Wireframe Joomla Template
