--- a/trunk/params.ini
+++ b/trunk/params.ini
@@ -7,8 +7,8 @@ body_font=arial
 header_font=arial
 columns=sidebar1:3;main:6;sidebar2:3
 doctype=html5
-headerscript=
-footerscript=
+headerscript=HEADER SCRIPT
+footerscript=FOOTER SCRIPT
 customcolors=no
 fontColor=000000
 headingColor=333333
