--- a/code/params.ini
+++ b/code/params.ini
@@ -1,17 +1,12 @@
 rebrand=no
 style=theme1
 mootools=1
+jquery=1
 logo=template
-logowidth=1
-body_font=arial
-header_font=arial
+logowidth=4
+body_font=default
+header_font=default
 columns=sidebar1:3;main:6;sidebar2:3
 doctype=html5
-headerscript=HEADER SCRIPT
-footerscript=FOOTER SCRIPT
-customcolors=no
-fontColor=000000
-headingColor=333333
-linkColor=3988CC
-linkHoverColor=3988CC
-
+bs_rowmode=row-fluid
+responsive=1
