Wright template specifics for build system

--- a/build.properties
+++ b/build.properties
@@ -2,7 +2,10 @@
 tpl.name=wright
 #Folder
 tpl.folder=js_wright
-#Enable framework
-tpl.wright=1
+#Enable framework (not needed for Wright template because it already contains Wright Framework)
+tpl.wright=0
 #Are sources included?
 tpl.source=0
+
+#Wright specifics
+path.wright=files
