Generic version numbers in files (for updating them with new build system)

--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,3 @@
-#Template Name
-tpl.name=wright
 #Folder
 tpl.folder=js_wright
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
@@ -7,5 +5,5 @@ tpl.wright=0
 #Are sources included?
 tpl.source=0
 
-#Wright specifics
+#Wright template specifics
 path.wright=files
