Updated Wright demo URL

--- a/readme.properties
+++ b/readme.properties
@@ -3,7 +3,7 @@ readme.title=Wright
 #Product details page link
 readme.product=http://wright.joomlashack.com
 #Demo link
-readme.demo=http://wright.joomlashack.com/wright
+readme.demo=http://wright.joomlashack.com/demo
 #Documentation link
 readme.docs=http://wright.joomlashack.com/demo/basic-options
 #Forum link
