--- a/build.properties
+++ b/build.properties
@@ -1,5 +1,5 @@
 #Folder
-tpl.folder=js_wright
+tpl.folder=js_wright_v2
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
 tpl.wright=0
 #Are sources included?
