--- a/build.properties
+++ b/build.properties
@@ -1,11 +1,15 @@
+#Builder settings
+	build.type=template
+	build.zipper=1
+
 #Folder
-tpl.folder=js_wright_v2
+	tpl.folder=js_wright_v2
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
-tpl.wright=0
+	tpl.wright=0
 #Are sources included?
-tpl.source=0
+	tpl.source=0
 
 #Wright template specifics
-path.wright=files
-wright.is_wright=1
-wright.responsive=0
+	path.wright=files
+	wright.is_wright=1
+	wright.responsive=0
