Specified new build parameters

--- a/build.properties
+++ b/build.properties
@@ -1,10 +1,14 @@
+#Builder settings
+	build.type=package
+	build.zipper=0
+	
 #Folder
-tpl.folder=js_wright
+	tpl.folder=js_wright
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
-tpl.wright=0
+	tpl.wright=0
 #Are sources included?
-tpl.source=0
+	tpl.source=0
 
 #Wright template specifics
-path.wright=files
-wright.is_wright=1
+	path.wright=files
+	wright.is_wright=1
