--- a/readme.properties
+++ b/readme.properties
@@ -1,3 +1,5 @@
+#### this is a Phing build file used to create the template help file ####
+
 #Template Name
 	readme.title=Wright
 #Product details page link
