--- a/readme.properties
+++ b/readme.properties
@@ -1,4 +1,4 @@
-#### this is a Phing build file used to create the template help file ####
+#### this is a phing build file used to create the template help file ####
 
 #Template Name
 	readme.title=Wright
