Unified bootstrap.css file per style (without considering Joomla version) Added support for style-xx.bootstrap.min.css file (customised from other site) Fixed header background colour (less)

--- a/readme.properties
+++ b/readme.properties
@@ -7,6 +7,6 @@
 #Demo link
 	readme.demo=http://wright.joomlashack.com/demo
 #Documentation link
-	readme.docs=http://wright.joomlashack.com/demo/basic-options
+	readme.docs=http://wright.joomlashack.com/demo/documentation-and-setup
 #Forum link
 	readme.forum=https://help.joomlashack.com/categories/20059413-wright-joomla-template-framework
