Temporary file change name for 3.1.4 dev build

--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,7 @@
 	build.zipper=1
 	
 #Folder
-	tpl.folder=js_wright
+	tpl.folder=js_wright_314
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
 	tpl.wright=0
 #Are sources included?
