Added autobuilder. Now add phing to your environment, set the autobuild.properties to your right www folder (with Joomla installed) and then hit "Discover" to have the latest Wright automatically installed.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ Thumbs.db
 nbproject
 *.sublime-project
 *.sublime-workspace
+sftp-config.json
 
 # Komodo
 *.komodoproject
@@ -35,3 +36,6 @@ nbproject
 .idea
 node_modules
 dist
+
+# Build system
+autobuild.properties
