--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,8 @@
 	build.zipper=1
 
 #Folder
-	tpl.folder=js_wright_v2
+	tpl.folder=js_wright
+	tpl.zip=js_wright_v2
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
 	tpl.wright=0
 #Are sources included?
