Parameters adjusts and PHPCS formatting

--- a/phing/tasks.properties
+++ b/phing/tasks.properties
@@ -1,2 +1,2 @@
 templateversion=phing.tasks.TemplateVersionTask
-wrightversion=phing.tasks.WrightVersionTask
+templatedetails=phing.tasks.TemplateDetailsTask
