Fixed builder tasks

--- a/phing/tasks.builder.properties
+++ b/phing/tasks.builder.properties
@@ -1,2 +1,2 @@
-templateversion=phing.tasks.TemplateVersionTask
-templatedetails=phing.tasks.TemplateDetailsTask
+templateversion=files.phing.tasks.TemplateVersionTask
+templatedetails=files.phing.tasks.TemplateDetailsTask
