--- a/build.properties
+++ b/build.properties
@@ -4,9 +4,11 @@
 	
 #Folder
 	tpl.folder=js_wright
-	tpl.zip=js_wright_builder
+	tpl.zip=js_wright
+
 #Enable framework (not needed for Wright template because it already contains Wright Framework)
 	tpl.wright=0
+
 #Are sources included?
 	tpl.source=0
 
