Update Joomlashack backlinks

--- a/readme.properties
+++ b/readme.properties
@@ -3,8 +3,8 @@
 #Template Name
 	readme.title=Wright
 #Product details page link
-	readme.product=http://wright.joomlashack.com
+	readme.product=https://wright.joomlashack.com/
 #Demo link
-	readme.demo=http://wright.joomlashack.com/demo
+	readme.demo=https://demo.wright.joomlashack.com/
 #Documentation link
-	readme.docs=http://wright.joomlashack.com/demo/documentation-and-setup
+	readme.docs=https://demo.wright.joomlashack.com/documentation-and-setup/installation
