--- a/.gitignore
+++ b/.gitignore
@@ -1,64 +1,40 @@
-# OSX
-.DS_Store
-._*
-.Spotlight-V100
-.Trashes
- 
+# General exclusion of system files
+###################################
+.*
+*~
+build.properties
+
+!.gitignore
+!.htaccess
+
+# Icon must ends with two \r.
+Icon
+
+
 # Windows
 Thumbs.db
 Desktop.ini
- 
-# PHPStorm
-.idea/
- 
+
 # Sublime Text
-*.sublime*
 sftp-config.json
- 
-# Eclipse
-.buildpath
-.project
-.settings
- 
+
 # Netbeans (custom)
-.netbeans/*
 /nbproject/*
- 
+
 # Temp files
 *.tmp
 *.bak
 *.swp
 *~.nib
-*~
- 
-# Phing build script
-build.properties
-autobuild.properties
- 
+
 # Packages #
 *.zip
 *.tar.*
- 
+
 # Composer
 composer.lock
 /vendor
- 
-# Test related files
-/tests/system/servers/configdef.php
-/tests/system/webdriver/tests/logs/
-/tests/acceptance.suite.yml
-codecept.phar
- 
+
 # Never ignore
-!.gitignore
 !index.html
 !index.php
-
-
-packages/*
-!packages/.gitkeep
-
-build.properties
-
-# Ignore compiled CSS files
-/src/css/joomla-*.css
