--- a/.gitignore
+++ b/.gitignore
@@ -1,61 +1,57 @@
-# OSX
-.DS_Store
-._*
-.Spotlight-V100
-.Trashes
- 
-# Windows
-Thumbs.db
-Desktop.ini
- 
-# PHPStorm
-.idea/
- 
-# Sublime Text
-*.sublime*
-sftp-config.json
- 
-# Eclipse
-.buildpath
-.project
-.settings
- 
-# Netbeans (custom)
-.netbeans/*
-/nbproject/*
- 
-# Temp files
-*.tmp
-*.bak
-*.swp
-*~.nib
+# General exclusion of system files
+###################################
+.*
 *~
- 
-# Phing build script
-build.properties
-autobuild.properties
- 
-# Packages #
-*.zip
-*.tar.*
- 
-# Composer
-composer.lock
-/vendor
- 
-# Test related files
-/tests/system/servers/configdef.php
-/tests/system/webdriver/tests/logs/
-/tests/acceptance.suite.yml
-codecept.phar
- 
-# Never ignore
+*.bak
 !.gitignore
-!index.html
-!index.php
 
+# Icon must ends with two \r.
+Icon
+
+
+# Windows Files #
+#################
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+
+# Eclipse #
+###########
+bin/**
+tmp/**
+tmp/**/*
+local.properties
+
+# JetBrains Apps #
+## IntelliJ
+out/
+
+# NetBeans IDE #
+################
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# misc other files #
+####################
+_notes/
 
 packages/*
 !packages/.gitkeep
 
 build.properties
+
+tests/_output/*
+*.sublime-project
+*.sublime-workspace
